# rust-wallet

./: .gitignore  .travis.yml  Cargo.toml  NOTICE  README.md  docker-compose.yml  run-tests.sh
.circleci/: config.yml
bitcoin_core_io/: Cargo.toml
bitcoin_core_io/src/: lib.rs
rust-wallet-grpc/: Cargo.toml
rust-wallet-grpc/src/: client.rs  lib.rs  main.rs  server.rs  walletrpc.proto  walletrpc.rs  walletrpc_grpc.rs
rust-wallet-grpc/tests/: tests.rs
src/: account.rs  accountfactory.rs  coins.rs  context.rs  error.rs  interface.rs  keyfabric.rs  keyfactory.rs  lib.rs  masteraccount.rs  mnemonic.rs  mod.rs  proved.rs  server.rs  sss.rs  trunk.rs  wallet.rs  walletrpc.proto  walletrpc.rs  walletrpc_grpc.rs
tests/: BIP39.json  tests.rs
wallet/: Cargo.toml
wallet/src/: account.rs  accountfactory.rs  db.rs  default.rs  electrumx.rs  error.rs  interface.rs  keyfactory.rs  lib.rs  mnemonic.rs  walletlibrary.rs
wallet/tests/: BIP32.json  tests.rs
