[package]
name = "bitcoin-wallet"
version = "1.1.0"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-bitcoin/rust-wallet/"
repository = "https://github.com/rust-bitcoin/rust-wallet/"
documentation = "https://github.com/rust-bitcoin/rust-wallet/"
description = "Wallet library for Bitcoin"
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"

[dependencies]
bitcoin = { version = "0.23", features = ["use-serde"] }
rand = "0.7"
rust-crypto = "0.2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
bitcoin = { version = "0.23", features = ["use-serde", "bitcoinconsensus"] }
serde_json = "1"
