[package]
name = "bitcoin-wallet"
version = "1.1.0"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-bitcoin/rust-wallet/"
repository = "https://github.com/rust-bitcoin/rust-wallet/"
documentation = "https://github.com/rust-bitcoin/rust-wallet/"
description = "Wallet library for Bitcoin"
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"

[features]
use-serde = ["serde", "bitcoin/use-serde"]

[dependencies]
bitcoin = "0.26"
rand = "0.7"
rust-crypto = "0.2"

serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
bitcoin = { version = "0.26", features = ["use-serde", "bitcoinconsensus"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
