[package]
name = "bitcoin_core_io"
version = "0.1.0"
authors = ["evgeniy.scherbina <evgeniy.scherbina@bitfury.com>"]
edition = "2018"

[dependencies.bitcoin]
version = "0.18"
features = ["use-serde"]

[dependencies.bitcoin_hashes]
version = "0.3"

[dependencies]
bitcoin_rpc_client = { git = "https://github.com/LightningPeach/bitcoinrpc-rust-client.git" }
wallet = { path = "../wallet" }
