[package]
name = "rust-wallet-grpc"
version = "0.1.0"
authors = ["evgeniy.scherbina <evgeniy.scherbina@bitfury.com>"]

[[bin]]
name = "wallet"
path = "src/main.rs"

[[bin]]
name = "walletcli"
path = "src/bin/client.rs"

[[bin]]
name = "gen_protos"
path = "src/bin/gen_protos.rs"

[dependencies]
wallet = { path = "../wallet" }
bitcoin_core_io = { path = "../bitcoin_core_io" }

bitcoin = "0.14.2"
protoc-rust-grpc = "0.5.0"
grpc = "0.5.0"
protobuf = "~2"
tls-api = "0.1.*"
tls-api-native-tls = "0.1.*"
crossbeam = "0.4.1"
bitcoin_rpc_client = { git = "https://github.com/rust-bitcoin-tools/bitcoinrpc_rust_client.git", branch = "enhancement" }
log = "0.4"
hex = "0.3"
clap = "2.32.0"
simple_logger = "0.5"

[dev-dependencies]
tc_coblox_bitcoincore = { git = "https://github.com/rust-bitcoin-tools/testcontainers-rs.git", branch = "zmq_support" }
testcontainers = { git = "https://github.com/rust-bitcoin-tools/testcontainers-rs.git", branch = "zmq_support" }
simple_logger = "0.5"
rand = "0.5"