[package]
name = "rust-wallet-grpc"
version = "0.1.0"
authors = ["evgeniy.scherbina <evgeniy.scherbina@bitfury.com>"]
edition = "2018"

[[bin]]
name = "wallet"
path = "src/main.rs"

[[bin]]
name = "wallet-cli"
path = "src/bin/client.rs"

[[bin]]
name = "gen_protos"
path = "src/bin/gen_protos.rs"

[dependencies.bitcoin]
version = "0.18"
features = ["use-serde"]

[dependencies.bitcoin_hashes]
version = "0.3"

[dependencies]
wallet = { path = "../wallet" }
bitcoin_core_io = { path = "../bitcoin_core_io" }

protoc-rust-grpc = "0.6"
grpc = "0.6"
protobuf = "2.4"
tls-api = "0.1"
tls-api-native-tls = "0.1"
crossbeam = "0.7"
bitcoin_rpc_client = { git = "https://github.com/LightningPeach/bitcoinrpc-rust-client.git" }
log = "0.4"
hex = "0.3"
clap = "2.32"
simple_logger = "1.0"

[dev-dependencies]
tc_coblox_bitcoincore = { git = "https://github.com/rust-bitcoin-tools/testcontainers-rs.git", branch = "zmq_support" }
testcontainers = { git = "https://github.com/rust-bitcoin-tools/testcontainers-rs.git", branch = "zmq_support" }
simple_logger = "1.0"
rand = "0.6"
