[package]
name = "wallet"
version = "0.1.0"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-bitcoin/rust-wallet/"
repository = "https://github.com/rust-bitcoin/rust-wallet/"
documentation = "https://github.com/rust-bitcoin/rust-wallet/"
description = "Wallet library for Bitcoin"
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"

[lib]
name = "wallet"
path = "src/lib.rs"

[dependencies.bitcoin]
version = "0.14.2"
features = ["serde"]

[dependencies.secp256k1]
version = "0.11.0"
features = ["serde"]

[dependencies]
rust-crypto = "0.2"
log = "0.4"
simple_logger = "0.5"
rand = "0.5"
hex = "0.3"
bitcoin-bech32 = "0.8.0"
rocksdb = "0.10.1"
byteorder = "1.2.6"
serde = "1"
serde_derive = "1"
serde_json = "1.0.31"
electrumx_client = { git = "https://github.com/evgeniy-scherbina/rust-electrumx-client.git" }

[dev-dependencies]
bitcoin_core_io = { path = "../bitcoin_core_io" }
rustc-serialize = "0.3"
bitcoin_rpc_client = { git = "https://github.com/rust-bitcoin-tools/bitcoinrpc_rust_client.git", branch = "enhancement" }
tc_coblox_bitcoincore = { git = "https://github.com/rust-bitcoin-tools/testcontainers-rs.git", branch = "zmq_support" }
testcontainers = { git = "https://github.com/rust-bitcoin-tools/testcontainers-rs.git", branch = "zmq_support" }
