[package]
name = "wallet"
version = "0.1.0"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-bitcoin/rust-wallet/"
repository = "https://github.com/rust-bitcoin/rust-wallet/"
documentation = "https://github.com/rust-bitcoin/rust-wallet/"
description = "Wallet library for Bitcoin"
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"
edition = "2018"

[lib]
name = "wallet"
path = "src/lib.rs"

[dependencies.bitcoin]
version = "0.18"
features = ["use-serde"]

[dependencies.bitcoin_hashes]
version = "0.3"

[dependencies.secp256k1]
version = "0.12"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies]
rust-crypto = "0.2"
log = "0.4"
simple_logger = "1.0"
rand = "0.6"
hex = "0.3"
bitcoin-bech32 = "0.9"
rocksdb = "0.12"
byteorder = "1.3"
electrumx_client = { git = "https://github.com/evgeniy-scherbina/rust-electrumx-client.git" }

[dev-dependencies]
bitcoin_core_io = { path = "../bitcoin_core_io" }
rustc-serialize = "0.3"
bitcoin_rpc_client = { git = "https://github.com/LightningPeach/bitcoinrpc-rust-client.git" }
tc_coblox_bitcoincore = { git = "https://github.com/rust-bitcoin-tools/testcontainers-rs.git", branch = "zmq_support" }
testcontainers = { git = "https://github.com/rust-bitcoin-tools/testcontainers-rs.git", branch = "zmq_support" }
